--- a/source/less/style.less
+++ b/source/less/style.less
@@ -6,3 +6,8 @@
 @import "page-footer.less";
 @import "catalog.less";
 @import "example.less";
+@import "cover.less";
+@import "additional-product.less";
+@import "present.less";
+@import "profile.less";
+@import "variables.less";
