--- a/source/less/body.less
+++ b/source/less/body.less
@@ -3,8 +3,11 @@ body {
   font-family: "Arial", sans-serif;
   font-size: 16px;
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
   color: #111111;
+  display: flex;
+  flex-direction: column;
+  min-width: 320px;
   }
 
   .visually-hidden:not(:focus):not(:active),
@@ -21,3 +24,4 @@ body {
   clip: rect(0 0 0 0);
   overflow: hidden;
   }
+
