--- a/source/less/catalog.less
+++ b/source/less/catalog.less
@@ -1,12 +1,51 @@
+.catalog {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 320px;
+  margin: 0 auto;
+}
+
+.catalog-wrapper {
+  background-color: #fff;
+}
+
 .catalog h1 {
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 36px;
   color: #111111;
   text-decoration: none;
+  font-weight: normal;
+  margin: 0;
+  margin-left: 20px;
+  padding: 35px 0;
+  border-bottom: 2px solid #ededed;
 }
 
 .catalog-list {
   list-style: none;
+  margin: 0;
+  margin-left: 20px;
+  padding: 0;
+}
+
+.item-catalog {
+  border-bottom: 2px solid #ededed;
+  min-height: 208px;
+  padding: 20px 0;
+}
+
+
+.item-catalog__info {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.item-catalog__table {
+  width: 140px;
+  font-family: "Arial", sans-serif;
+  font-size: 12px;
+  color: #444444;
 }
 
 .item-catalog__link {
@@ -14,6 +53,12 @@
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   color: #111111;
+}
+
+.catalog-list__item h3 {
+  font-weight: normal;
+  font-family: "Oswald", "Arial", sans-serif;
+  font-style: 16px;
 }
 
 .catalog-list__item p {
@@ -32,16 +77,43 @@
   font-size: 16px;
 }
 
+.catalog-product {
+  display: flex;
+  flex-direction: column;
+}
+
+.catalog-product__plus {
+  position: relative;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  margin-top: 26px;
+  margin-left: 145px;
+}
+
+.catalog-product-plus::after {
+  content: "";
+  width: 30px;
+  height: 20px;
+  position: absolute;
+  background-color: blue;
+  top: 20px;
+}
+
 .catalog-product__heading {
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   color: #111111;
+  text-transform: uppercase;
+  text-align: center;
 }
 
 .catalog-product__text {
   font-family: "Arial", sans-serif;
   font-size: 12px;
   color: #444444;
+  text-align: center;
+  margin: 0;
 }
 
 .catalog-product__link {
@@ -51,4 +123,7 @@
   background-color: #f2f2f2;
   padding: 12px 93px;
   text-decoration: none;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 20px;
 }
