--- a/source/less/example.less
+++ b/source/less/example.less
@@ -1,13 +1,61 @@
+.example {
+  display: flex;
+  flex-direction: column;
+  min-width: 320px;
+  align-items: center;
+  background-color: #f2f2f2;
+  position: relative;
+}
+
+.expamle__wrapper {
+  display: flex;
+  flex-direction: column;
+  max-width: 320px;
+  align-items: center;
+}
+
 .example h2 {
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 36px;
   color: #111111;
+  font-weight: normal;
+  padding: 0;
+  margin: 10px;
+  margin-left: -80px;
+  text-align: left;
 }
 
 .example__description {
   font-family: "Arial", sans-serif;
   font-size: 14px;
   color: #444444;
+  margin-left: 20px;
+}
+
+
+.example__block {
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+}
+
+
+.block__weight {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-right: 16px;
+  width: 124px;
+  height: 55px;
+}
+
+.block__time {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-left: 16px;
+  width: 124px;
+  height: 55px;
 }
 
 .block__heading {
@@ -16,14 +64,24 @@
   color: #111111;
   text-transform: uppercase;
   border: 1px solid #cfcfcf;
-  padding: 16px 43px;
   border-radius: 5px;
+  margin: 0;
+  padding: 8px 0;
+  text-align: center;
+  font-weight: normal;
 }
 
 .block__content {
   font-size: 12px;
+  line-height: 12px;
   font-family: "Arial", sans-serif;
   color: #444444;
+  background-color: #f2f2f2;
+  text-align: center;
+  max-width: 85px;
+  margin-left: 18px;
+  margin-top: -10px;
+
 }
 
 .example__text {
@@ -31,4 +89,11 @@
   font-size: 14px;
   text-transform: uppercase;
   color: #111111;
+  margin-top: 30px;
+}
+
+
+
+.slider__after {
+  display: none;
 }
