Создание планшетной версии главной страницы и каталога

--- a/source/less/advantages.less
+++ b/source/less/advantages.less
@@ -54,6 +54,10 @@
   content: url(../img/advantage-clock@1x.png);
 }
 
+.item--namber {
+  display: none;
+}
+
 @media (min-width: @tablet-width) {
   .advantages {
     min-width: 768px;
@@ -95,6 +99,7 @@
   }
 
   .item--namber {
+    display: block;
     width: 122px;
     height: 235px;
     background-color: #fff;
