--- a/source/less/body.less
+++ b/source/less/body.less
@@ -8,6 +8,7 @@ body {
   display: flex;
   flex-direction: column;
   min-width: 320px;
+  background-color: #fff;
   }
 
   .visually-hidden:not(:focus):not(:active),
