--- a/source/less/map.less
+++ b/source/less/map.less
@@ -45,6 +45,11 @@
 
   .map__wrapper {
     min-width: 768px;
+    background-color: #fff;
+  }
+
+  .wrapper--grey {
+    background-color: #f2f2f2;
   }
 
   .map h2 {
