--- a/source/less/additional-product.less
+++ b/source/less/additional-product.less
@@ -72,3 +72,95 @@
   padding: 5px 110px;
   margin: 7px 0 17px;
 }
+
+@media (min-width: @tablet-width) {
+  .additional-product {
+    min-width: 768px;
+    margin-bottom: 69px;
+  }
+
+  .additional-product__wrapper {
+    width: 768px;
+    background-color: #fff;
+  }
+
+  .additional-product__wrapper h2 {
+    font-size: 36px;
+    margin: 0;
+    margin-left: 30px;
+    border: none;
+    padding: 20px 36px;
+    background-color: #fff;
+    width: 338px;
+  }
+
+  .additional-product__wrapper h2::before {
+    content: "";
+    position: absolute;
+    width: 328px;
+    height: 3px;
+    background-color: #68b738;
+    right: 0;
+    top: 50px;
+  }
+
+  .additional-product__wrapper h2::after {
+    content: "";
+    position: absolute;
+    width: 30px;
+    height: 3px;
+    background-color: #68b738;
+    left: 0;
+    top: 50px;
+  }
+
+  .list-product {
+    width: 708px;
+    background-color: #fff;
+    margin-left: 30px;
+  }
+
+  .list-product__item {
+    padding: 0;
+    padding-bottom: 20px;
+    border: 1px solid #ededed;
+    border-bottom: none;
+    width: 100%;
+  }
+
+  .list-product__item:last-child {
+    border-bottom: 1px solid #ededed;
+  }
+
+  .list-product__heading {
+    font-family: "Oswald", "Arial", sans-serif;
+    font-size: 20px;
+    text-transform: uppercase;
+    color: #000000;
+    margin: 27px 0 23px;
+  }
+
+  .list-product__text {
+    font-family: "Arial", sans-serif;
+    font-size: 16px;
+    color: #000000;
+    margin: 32px 0 27px;
+  }
+
+  .list-product__link {
+    font-family: "Oswald", "Arial", sans-serif;
+    text-transform: uppercase;
+    font-size: 16px;
+    color: #fff;
+    background-color: #68b738;
+    text-decoration: none;
+    padding: 5px 285px;
+    margin: 7px 0 17px 37px;
+  }
+
+  .list-product__item--p {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 37px;
+  }
+}
