--- a/source/less/example.less
+++ b/source/less/example.less
@@ -21,15 +21,17 @@
   font-weight: normal;
   padding: 0;
   margin: 10px;
-  margin-left: -80px;
+  margin-left: -60px;
   text-align: left;
 }
 
 .example__description {
   font-family: "Arial", sans-serif;
   font-size: 14px;
+  line-height: 18px;
   color: #444444;
   margin-left: 20px;
+  width: 270px;
 }
 
 
@@ -37,6 +39,7 @@
   display: flex;
   position: relative;
   justify-content: space-between;
+  margin-left: 20px;
 }
 
 
@@ -90,10 +93,111 @@
   text-transform: uppercase;
   color: #111111;
   margin-top: 30px;
+  text-align: center;
 }
 
+.slider__img {
+    width: 320px;
+    height: 240px;
+}
 
+.img__befor {
+  background-image: url(../img/before-mobile@1x.png);
+   background-repeat: no-repeat;
+}
+
+.img__after {
+  background-image: url(../img/after-mobile@1x.png);
+   background-repeat: no-repeat;
+}
 
 .slider__after {
   display: none;
+}
+
+@media (min-width: @tablet-width) {
+  .example {
+    display: flex;
+    flex-direction: column;
+    min-width: 768px;
+  }
+
+  .expamle__wrapper {
+    display: flex;
+    flex-direction: column;
+    max-width: 768px;
+  }
+
+  .example h2 {
+    font-size: 60px;
+    margin: 10px;
+    margin-left: -320px;
+    text-align: left;
+  }
+
+  .example__description {
+    font-size: 16px;
+    line-height: 20px;
+    margin-left: 30px;
+    width: 680px;
+  }
+
+
+  .example__block {
+    margin-left: 30px;
+  }
+
+
+  .block__weight {
+    width: 162px;
+    height: 74px;
+  }
+
+  .block__time {
+    width: 162px;
+    height: 74px;
+  }
+
+  .block__heading {
+    font-size: 30px;
+  }
+
+  .block__content {
+    font-size: 16px;
+    line-height: 16px;
+    max-width: 85px;
+    margin-left: 40px;
+    margin-top: -10px;
+  }
+
+  .examle__tablet {
+    display: flex;
+    margin-top: 40px;
+  }
+
+  .example__text {
+    font-size: 20px;
+    margin-top: 10px;
+    max-width: 173px;
+    margin-left: 160px;
+    text-align: right;
+  }
+
+  .slider__img {
+    width: 690px;
+    height: 517px;
+  }
+  .img__befor {
+    background-image: url(../img/before-tablet@1x.png);
+    background-repeat: no-repeat;
+  }
+
+  .img__after {
+    background-image: url(../img/after-tablet@1x.png);
+    background-repeat: no-repeat;
+  }
+
+  .slider__after {
+    display: none;
+  }
 }
