Продолжаем десктопную версию

--- a/source/less/catalog.less
+++ b/source/less/catalog.less
@@ -107,9 +107,10 @@
   text-decoration: none;
   background-color: #68b738;
   color: white;
-  padding: 12px 106px;
+  padding: 12px 110px;
   font-family: "Oswald";
   font-size: 16px;
+  margin-left: 20px;
 }
 
 .catalog-product {
