--- a/source/less/advantages.less
+++ b/source/less/advantages.less
@@ -143,3 +143,98 @@
     background-image: url(../img/advantage-clock@1x.png);
   }
 }
+
+@media (min-width: @desktop-width) {
+  .advantages {
+    width: 1440px;
+    justify-content: center;
+    background-color: rgba(250, 250, 250, 0);
+    box-sizing: border-box;
+    flex-wrap: wrap;
+    margin: 0 auto;
+  }
+
+  .advantages__wrapper {
+    width: 1440px;
+    margin-left: 110px;
+    margin-top: 79px;
+  }
+
+  .advantages h2 {
+    font-size: 60px;
+    margin: 0px;
+    margin-bottom: 67px;
+  }
+
+  .list-page {
+    font-size: 16px;
+    min-width: 1220px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 0px;
+  }
+
+  .list-page__item {
+    padding-left: 0;
+    padding-top: 123px;
+    margin: 0px;
+    margin-right: 80px;
+    position: relative;
+    width: 245px;
+    height: 320px;
+    box-sizing: border-box;
+  }
+
+  .list-page__item:nth-child(2n+1) {
+    margin-right: 80px;
+  }
+
+  .list-page__item:last-child {
+    margin-right: 0px;
+  }
+
+  .item--namber {
+    display: block;
+    width: 122px;
+    height: 235px;
+    background-color: #fff;
+    color: #f2f2f2;
+    font-family: "Oswald", "Arial", sans-serif;
+    font-size: 281.07px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 0;
+    margin: 0;
+    line-height: 200px;
+    z-index: -1;
+  }
+
+  .list-page__item::before {
+    content: "";
+    width: 80px;
+    height: 80px;
+    background-color: #68b738;
+    background-image: url(../img/advantage-leaf@1x.png);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+  }
+
+  .item--powder::before {
+    content: "";
+    background-image: url(../img/advantage-powder@1x.png);
+  }
+
+  .item--dining::before {
+    content: "";
+    background-image: url(../img/advantage-dining@1x.png);
+  }
+
+  .item--clock::before {
+    content: "";
+    background-image: url(../img/advantage-clock@1x.png);
+  }
+}
