--- a/source/less/example.less
+++ b/source/less/example.less
@@ -201,3 +201,115 @@
     display: none;
   }
 }
+
+@media (min-width: @desktop-width)  {
+  .example {
+    display: flex;
+    flex-direction: column;
+    min-width: 1440px;
+    position: relative;
+    background-color: rgba(250, 250, 250, 0);
+  }
+
+  .expamle__wrapper {
+    display: flex;
+    flex-direction: row;
+    max-width: 1220px;
+  }
+
+  .example h2 {
+    font-size: 60px;
+    padding: 0;
+    margin: 0;
+    margin-left: 0px;
+    text-align: left;
+    width: 475px;
+    margin-top: -86px;
+    background-color: #fff;
+    padding-bottom: 30px;
+  }
+
+  .example__description {
+    font-size: 16px;
+    line-height: 24px;
+    margin-left: 0px;
+    width: 438px;
+    margin-top: 70px;
+  }
+
+  .example__block {
+    margin-left: 0px;
+  }
+
+  .block__weight {
+    width: 162px;
+    height: 74px;
+  }
+
+  .block__time {
+    width: 162px;
+    height: 74px;
+  }
+
+  .block__heading {
+    font-size: 30px;
+  }
+
+  .block__content {
+    font-size: 16px;
+    line-height: 16px;
+    max-width: 85px;
+    margin-left: 40px;
+    margin-top: -10px;
+  }
+
+  .examle__tablet {
+    display: flex;
+    flex-direction: column;
+    margin-top: 40px;
+  }
+
+  .example__text {
+    font-size: 20px;
+    margin-top: 40px;
+    min-width: 325px;
+    margin-left: 0px;
+    text-align: center;
+  }
+
+  .slider__img {
+    width: 690px;
+    height: 517px;
+    margin-left: 80px;
+  }
+  .img__befor {
+    background-image: url(../img/before-desktop@1x.png);
+    background-repeat: no-repeat;
+  }
+
+  .img__after {
+    background-image: url(../img/after-desktop@1x.png);
+    background-repeat: no-repeat;
+  }
+
+  .slider__after {
+    display: none;
+  }
+
+  .example__bgc {
+    width: 100%;
+    height: 462px;
+    background-color: #f2f2f2;
+    top: 127px;
+    position: absolute;
+  }
+
+  .example__slider {
+    z-index: 1;
+  }
+
+  .example__desktop {
+    z-index: 3;
+    background-color: #f2f2f2;
+  }
+}
