--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -8,7 +8,7 @@
 }
 
 .page-footer__wrapper {
-  max-width: 320px;
+  width: 320px;
 }
 
 .page-footer__list {
@@ -85,7 +85,7 @@
   }
 
   .page-footer__wrapper {
-    max-width: 768px;
+    width: 768px;
   }
 
   .page-footer__list {
@@ -162,3 +162,90 @@
   }
 }
 
+@media (min-width: @desktop-width) {
+  .page-footer{
+    min-width: 1440px;
+    min-height: 150px;
+  }
+
+  .page-footer__wrapper {
+    width: 1440px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .page-footer__list {
+    width: 1440px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+  }
+
+  .page-footer__logo {
+    padding: 39px 76px;
+    padding-left: 0;
+    margin: 20px 30px;
+    margin-right: 20px;
+    margin-left: 110px;
+    position: relative;
+    border: none;
+  }
+
+  .list-social {
+    position: relative;
+    display: flex;
+    list-style: none;
+    padding: 24px 14px;
+    min-height: 19px;
+    margin: 35px 70px;
+    border: none;
+    min-width: 125px;
+  }
+
+  .list-social a {
+    cursor: pointer;
+  }
+
+  .list-social__vk::after {
+    content: url(../img/icon-vk.svg);
+    position: absolute;
+    width: 30px;
+    height: 16px;
+    left: 0px;
+  }
+
+  .list-social__ins::after {
+    content: url(../img/icon-insta.svg);
+    position: absolute;
+    width: 23px;
+    height: 23px;
+    left: 60px;
+  }
+
+  .list-social__fb::after {
+    content: url(../img/icon-fb.svg);
+    position: absolute;
+    width: 14px;
+    height: 28px;
+    left: 116px;
+  }
+
+  .page-footer__copyright {
+    display: flex;
+    margin: 45px 30px;
+    margin-right: 110px;
+    justify-content: space-between;
+  }
+
+  .copyright_text {
+    font-family: "Arial", sans-serif;
+    font-size: 16px;
+    color: #444444;
+  }
+
+  .copyright__logo {
+    polygon {
+      fill: #666666;
+    }
+  }
+}
