--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -17,15 +17,15 @@
   position: relative;
 }
 
-
 .nav__logo {
   width: 190px;
-  height: 93px;
+  height: 40px;
   background-image: url(../img/logo-mobile.svg);
   margin: 10px 35px 10px 20px;
+  background-repeat: no-repeat;
 }
 
-.nav--opened + .list-menu {
+.nav--opened .list-menu {
   list-style: none;
   display: flex;
   flex-direction: column;
@@ -97,6 +97,7 @@
   padding: 10px;
   text-align: center;
   border-top: 1px solid #ededed;
+  color: #000000;
 }
 
 .list-menu__link {
@@ -134,25 +135,27 @@
     margin: 24px 30px;
   }
 
-
   .nav__button {
     display: none;
   }
 
-  .page-header__list {
+  .nav--opened .list-menu {
     list-style: none;
     display: flex;
+    flex-direction: row;
     text-transform: uppercase;
     padding: 0;
     margin: 0;
     min-height: 70px;
     margin-right: 30px;
     margin-top: 30px;
+    z-index: 1;
   }
 
   .list-menu__item {
     font-size: 18px;
     border: none;
+    color: #000000;
   }
 
   .list-menu__item--activ {
@@ -160,5 +163,67 @@
     text-align: center;
     border: none;
     border-bottom: 2px solid #68b738;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-header {
+    min-width: 120px;
+    margin: 0 auto;
+    min-height: 70px;
+  }
+
+  .page-header__wrapper {
+    background-color: #fff;
+    width: 1440px;
+    display: flex;
+    flex-direction: row;
+  }
+
+  .nav__logo {
+    width: 202px;
+    height: 59px;
+    background-image: url(../img/logo-desktop.svg);
+    margin: 24px 40px;
+    margin-left: 110px;
+  }
+
+  .nav__button {
+    display: none;
+  }
+
+  .nav--opened .list-menu {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    text-transform: uppercase;
+    padding: 0;
+    margin: 0;
+    min-height: 70px;
+    margin-right: 145px;
+    margin-top: 30px;
+  }
+
+  .list-menu__link {
+    font-size: 20px;
+    border: none;
+    color: #fff;
+  }
+
+  .list-menu__item--activ {
+    padding: 10px;
+    text-align: center;
+    border: none;
+    border-bottom: 2px solid #fff;
+    color: #fff;
+  }
+
+  .menu-desktop .list-menu__link {
+    color: #000000;
+  }
+
+  .menu-desktop .list-menu__item--activ {
+    border-bottom: 2px solid #68b738;
+    color: #000000;
   }
 }
