Продолжаем desktop версию

--- a/source/less/cover.less
+++ b/source/less/cover.less
@@ -122,6 +122,7 @@
 
   .cover_bg-dekstop {
     background-image: url(../img/index-background-desktop@1x.jpg);
+    background-color: #64a83b;
     background-repeat: no-repeat;
     width: 720px;
     height: 696px;
