--- a/source/less/additional-product.less
+++ b/source/less/additional-product.less
@@ -76,12 +76,12 @@
 @media (min-width: @tablet-width) {
   .additional-product {
     min-width: 768px;
-    margin-bottom: 69px;
   }
 
   .additional-product__wrapper {
     width: 768px;
     background-color: #fff;
+    margin-bottom: 69px;
   }
 
   .additional-product__wrapper h2 {
@@ -118,6 +118,7 @@
     width: 708px;
     background-color: #fff;
     margin-left: 30px;
+    margin-bottom: 69px;
   }
 
   .list-product__item {
@@ -162,5 +163,116 @@
     display: flex;
     justify-content: space-between;
     margin: 0 37px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .additional-product {
+    min-width: 1440px;
+  }
+
+  .additional-product__wrapper {
+    width: 1440px;
+    background-color: #fff;
+    margin-bottom: 69px;
+  }
+
+  .additional-product__content {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .additional-product__wrapper h2 {
+    font-size: 36px;
+    margin: 0;
+    margin-left: 110px;
+    border: none;
+    padding: 20px 36px;
+    padding-left: 0;
+    background-color: #fff;
+    width: 338px;
+  }
+
+  .additional-product__wrapper h2::before {
+    content: "";
+    position: absolute;
+    width: 958px;
+    height: 3px;
+    background-color: #68b738;
+    right: 0;
+    top: 50px;
+  }
+
+  .additional-product__wrapper h2::after {
+    content: "";
+    position: absolute;
+    width: 70px;
+    height: 3px;
+    background-color: #68b738;
+    left: 0;
+    top: 50px;
+  }
+
+  .list-product {
+    width: 895px;
+    height: 289px;
+    background-color: #fff;
+    margin-left: 110px;
+  }
+
+  .list-product__item {
+    padding: 0;
+    margin: 0;
+    border: 1px solid #ededed;
+    border-bottom: none;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    border-left: none;
+    border-right: none;
+    max-height: 71px;
+
+  }
+
+  .list-product__item:last-child {
+    border-bottom: 1px solid #ededed;
+    border-left: none;
+    border-right: none;
+  }
+
+  .list-product__heading {
+    font-family: "Oswald", "Arial", sans-serif;
+    font-size: 20px;
+    text-transform: uppercase;
+    color: #000000;
+    margin: 23px 0 23px;
+  }
+
+  .list-product__text {
+    font-family: "Arial", sans-serif;
+    font-size: 16px;
+    color: #000000;
+    margin: 32px 0 23px;
+  }
+
+  .list-product__link {
+    font-family: "Oswald", "Arial", sans-serif;
+    text-transform: uppercase;
+    font-size: 16px;
+    color: #fff;
+    background-color: #68b738;
+    text-decoration: none;
+    padding: 13px 90px;
+    margin: 0;
+    margin-top: 20px;
+    max-height: 15px;
+  }
+
+  .list-product__item--p {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 27px 0 27px;
+    margin-left: 0;
+    width: 457px;
   }
 }
