--- a/source/less/present.less
+++ b/source/less/present.less
@@ -39,11 +39,11 @@
   .present {
     display: flex;
     flex-direction: column;
-    min-width: 768px;
+    width: 768px;
     align-items: center;
     margin: 0 auto;
     min-height: 200px;
-    margin-bottom: 76px;
+    margin-bottom: 0px;
   }
 
   .present__wrapper {
@@ -73,5 +73,47 @@
     text-align: left;
     width: 165px;
     margin: 75px 124px 70px 421px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .present {
+    display: flex;
+    flex-direction: column;
+    width: 245px;
+    align-items: center;
+    margin: 0 auto;
+    min-height: 200px;
+    margin-bottom: 0px;
+  }
+
+  .present__wrapper {
+    background-color: #68b738;
+    height: 289px;
+    width: 245px;
+    background-image: url(../img/gift-photo-desktop@1x.jpg);
+    background-repeat: no-repeat;
+    position: relative;
+  }
+
+  .present__icon {
+    width: 57px;
+    height: 60px;
+    position: absolute;
+    top: 65px;
+    left: 90px;
+    polygon {
+      fill: #ffffff;
+    }
+  }
+
+  .present__text {
+    font-family: "Arial", sans-serif;
+    font-size: 16px;
+    color: #fff;
+    text-align: left;
+    width: 165px;
+    margin: 189px 40px 43px;
+    text-align: center;
   }
 }
