Верстка страницы формы

--- a/source/less/additional-product.less
+++ b/source/less/additional-product.less
@@ -73,6 +73,15 @@
   margin: 7px 0 17px;
 }
 
+.list-product__link:hover {
+  background-color: #5eaa2f;
+}
+
+.list-product__link:active {
+  color: #8fc46e;
+  background-color: #5eaa2f;
+}
+
 @media (min-width: @tablet-width) {
   .additional-product {
     min-width: 768px;
