--- a/source/less/cover.less
+++ b/source/less/cover.less
@@ -55,6 +55,15 @@
   margin-left: 20px;
 }
 
+.cover__link:hover {
+  background-color: #5eaa2f;
+}
+
+.cover__link:active {
+  color: #8fc46e;
+  background-color: #5eaa2f;
+}
+
 @media (min-width: @tablet-width) {
   .cover {
     display: flex;
