--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -77,6 +77,13 @@
   }
 }
 
+.page-footer__logo-link:hover {
+  opacity: 0.8;
+}
+
+.page-footer__logo-link:active {
+  opacity: 0.6;
+}
 
 @media (min-width: @tablet-width) {
   .page-footer{
