--- a/source/less/cover.less
+++ b/source/less/cover.less
@@ -11,7 +11,7 @@
   width: 320px;
   background-color: #fff;
   position: relative;
-  min-height: 510px;
+  min-height: 502px;
 }
 
 .cover__h1 {
@@ -23,7 +23,9 @@
   color: #fff;
   font-weight: normal;
   text-align: center;
-  margin-left: 40px;
+  margin-left: 30px;
+  margin-bottom: 21px;
+  margin-top: 27px;
 }
 
 .cover__text {
@@ -32,19 +34,20 @@
   text-transform: uppercase;
   text-align: center;
   color: #fff;
+  margin-bottom: 25px;
 }
 
 .cover__link {
   font-family: "Oswald", "Arial", sans-serif;
-  font-style: 14px;
+  font-size: 14px;
   text-transform: uppercase;
   text-decoration: none;
   background-color: #68b738;
   color: white;
-  padding: 13px 65px;
+  padding: 10px 73px 9px 73px;
   margin-left: 20px;
   position: absolute;
-  top: 450px;
+  top: 440px;
 }
 
 .cover__food {
@@ -77,6 +80,7 @@
     background-image: none;
     width: 768px;
     background-color: #fff;
+    min-height: 843px;
   }
 
   .cover__h1 {
@@ -85,7 +89,9 @@
     max-width: 418px;
     color: #000000;
     text-align: left;
-    margin-left: 120px;
+    margin-left: 118px;
+    margin-top: 34px;
+    margin-bottom: 35px;
   }
 
   .cover__text {
@@ -93,21 +99,22 @@
     text-align: left;
     color: #000000;
     margin-left: 120px;
+    margin-bottom: 15px;
   }
 
   .cover__link {
     position: absolute;
     font-size: 20px;
-    padding: 10px 20px;
-    margin-left: 120px;
-    top: 290px;
+    padding: 11px 27px 11px;
+    margin-left: 119px;
+    top: 262px;
   }
 
   .cover__food {
     background-image: url(../img/index-can-tablet@1x.jpg);
     width: 680px;
     height: 600px;
-    margin-left: 20px;
+    margin-left: 29px;
     background-repeat: no-repeat;
   }
 }
@@ -133,11 +140,11 @@
     background-image: url(../img/index-background-desktop@1x.jpg);
     background-color: #64a83b;
     background-repeat: no-repeat;
-    width: 720px;
+    width: 721px;
     height: 696px;
     position: absolute;
-    right: 0;
-    top: -110px;
+    right: 0px;
+    top: -140px;
   }
 
   .cover__h1 {
@@ -146,21 +153,31 @@
     width: 420px;
     color: #000000;
     text-align: left;
-    margin-left: 120px;
+    margin-left: 190px;
+    margin-top: 85px;
   }
 
   .cover__text {
     font-size: 20px;
     text-align: left;
     color: #000000;
-    margin-left: 120px;
+    margin-left: 190px;
+  }
+
+  .cover__link {
+    position: absolute;
+    font-size: 20px;
+    padding: 11px 27px 11px;
+    margin-left: 190px;
+    top: 320px;
   }
 
   .cover__food {
     background-image: url(../img/index-can-desktop@1x.png);
-    width: 540px;
+    width: 550px;
     height: 485px;
-    margin-left: 25px;
+    margin-left: -47px;
+    margin-top: 5px;
     background-repeat: no-repeat;
     z-index: 1;
   }
