--- a/source/less/example.less
+++ b/source/less/example.less
@@ -10,8 +10,9 @@
 .expamle__wrapper {
   display: flex;
   flex-direction: column;
-  max-width: 320px;
+  width: 320px;
   align-items: center;
+  height: 705px;
 }
 
 .example h2 {
@@ -21,7 +22,8 @@
   font-weight: normal;
   padding: 0;
   margin: 10px;
-  margin-left: -60px;
+  margin-left: 2px;
+  margin-top: 20px;
   text-align: left;
 }
 
@@ -30,8 +32,9 @@
   font-size: 14px;
   line-height: 18px;
   color: #444444;
-  margin-left: 20px;
-  width: 270px;
+  margin-left: 2px;
+  width: 275px;
+  margin-top: 27px;
 }
 
 
@@ -39,7 +42,8 @@
   display: flex;
   position: relative;
   justify-content: space-between;
-  margin-left: 20px;
+  margin-left: 3px;
+  margin-top: 25px;
 }
 
 
@@ -47,6 +51,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  margin: 0;
   margin-right: 16px;
   width: 124px;
   height: 55px;
@@ -67,7 +72,7 @@
   color: #111111;
   text-transform: uppercase;
   border: 1px solid #cfcfcf;
-  border-radius: 5px;
+  border-radius: 3px;
   margin: 0;
   padding: 8px 0;
   text-align: center;
@@ -83,17 +88,23 @@
   text-align: center;
   max-width: 85px;
   margin-left: 18px;
-  margin-top: -10px;
+  margin-top: -7px;
 
 }
 
 .example__text {
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 14px;
+  line-height: 14px;
   text-transform: uppercase;
   color: #111111;
   margin-top: 30px;
   text-align: center;
+  margin-top: 37px;
+}
+
+.example__slider {
+  margin-top: 25px;
 }
 
 .slider__img {
@@ -120,31 +131,35 @@
     display: flex;
     flex-direction: column;
     min-width: 768px;
+    height: 1080px;
   }
 
   .expamle__wrapper {
     display: flex;
     flex-direction: column;
-    max-width: 768px;
+    width: 708px;
   }
 
   .example h2 {
     font-size: 60px;
     margin: 10px;
-    margin-left: -320px;
+    margin-left: 0px;
+    margin-top: 30px;
     text-align: left;
   }
 
   .example__description {
     font-size: 16px;
-    line-height: 20px;
-    margin-left: 30px;
+    line-height: 24px;
+    margin-left: 0px;
     width: 680px;
+    margin-top: 50px;
   }
 
 
   .example__block {
-    margin-left: 30px;
+    margin-left: 0px;
+    margin-right: 170px;
   }
 
 
@@ -177,10 +192,16 @@
 
   .example__text {
     font-size: 20px;
-    margin-top: 10px;
-    max-width: 173px;
-    margin-left: 160px;
+    line-height: 26px;
+    margin-top: 22px;
+    max-width: 175px;
+    margin-left: 0px;
+    margin-right: 0px;
     text-align: right;
+  }
+
+  .example__slider {
+    margin-top: 75px;
   }
 
   .slider__img {
@@ -209,12 +230,13 @@
     min-width: 1440px;
     position: relative;
     background-color: rgba(250, 250, 250, 0);
+    height: 605px;
   }
 
   .expamle__wrapper {
     display: flex;
     flex-direction: row;
-    max-width: 1220px;
+    width: 1220px;
   }
 
   .example h2 {
@@ -223,10 +245,10 @@
     margin: 0;
     margin-left: 0px;
     text-align: left;
-    width: 475px;
-    margin-top: -86px;
+    width: 595px;
+    margin-top: -178px;
     background-color: #fff;
-    padding-bottom: 30px;
+    padding-bottom: 44px;
   }
 
   .example__description {
@@ -234,7 +256,7 @@
     line-height: 24px;
     margin-left: 0px;
     width: 438px;
-    margin-top: 70px;
+    margin-top: 90px;
   }
 
   .example__block {
@@ -280,7 +302,8 @@
   .slider__img {
     width: 690px;
     height: 517px;
-    margin-left: 80px;
+    margin-left: -25px;
+    margin-bottom: 290px;
   }
   .img__befor {
     background-image: url(../img/before-desktop@1x.png);
@@ -298,9 +321,9 @@
 
   .example__bgc {
     width: 100%;
-    height: 462px;
+    height: 464px;
     background-color: #f2f2f2;
-    top: 127px;
+    top: 142px;
     position: absolute;
   }
 
