--- a/source/less/map.less
+++ b/source/less/map.less
@@ -10,6 +10,7 @@
   display: flex;
   width: 320px;
   justify-content: space-between;
+  height: 114px;
 }
 
 .map h2 {
@@ -19,8 +20,9 @@
   color: #111111;
   font-weight: normal;
   text-transform: uppercase;
-  margin-left: 20px;
+  margin: 27px 0px 0px 20px;
   min-width: 130px;
+  max-height: 63px;
  }
 
  .map__text {
@@ -28,11 +30,13 @@
    font-size: 14px;
    line-height: 20px;
    color: #444444;
-   margin-left: 20px;
+   margin: 27px 0px 0px 10px;
+   max-height: 63px;
  }
 
  .map__img {
   background-image: url(../img/bg-map-mobile@1x.png);
+  background-position: 0px -38px;
   width: 320px;
   height: 362px;
 }
@@ -46,6 +50,7 @@
   .map__wrapper {
     width: 768px;
     background-color: #fff;
+    min-height: 201px;
   }
 
   .wrapper--grey {
@@ -57,6 +62,7 @@
     line-height: 24px;
     margin-left: 70px;
     width: 160px;
+    margin-top: 69px;
    }
 
    .map__text {
@@ -65,10 +71,13 @@
      color: #444444;
      margin-right: 70px;
      width: 155px;
+     text-align: right;
+     margin-top: 65px;
    }
 
    .map__img {
      background-image: url(../img/bg-map-tablet@1x.png);
+     background-position: 0px 0px;
      width: 768px;
      height: 398px;
    }
