--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -160,11 +160,12 @@
     display: flex;
     flex-direction: row;
     text-transform: uppercase;
+    justify-content: space-between;
     padding: 0;
     margin: 0;
     min-height: 70px;
     margin-right: 30px;
-    margin-top: 30px;
+    margin-top: 22px;
     z-index: 1;
   }
 
@@ -172,13 +173,25 @@
     font-size: 18px;
     border: none;
     color: #000000;
+    padding: 18px;
   }
 
   .list-menu__item--activ {
-    padding: 10px;
     text-align: center;
     border: none;
     border-bottom: 2px solid #68b738;
+  }
+
+  .list-menu__link {
+    padding: 5px 0;
+  }
+
+  .list-menu__item:first-child {
+    padding-left: 0;
+  }
+
+  .list-menu__item:last-child {
+    padding-right: 0;
   }
 }
 
@@ -202,6 +215,7 @@
     background-image: url(../img/logo-desktop.svg);
     margin: 24px 40px;
     margin-left: 110px;
+    margin-top: 54px;
   }
 
   .nav__button {
@@ -216,18 +230,19 @@
     padding: 0;
     margin: 0;
     min-height: 70px;
-    margin-right: 145px;
-    margin-top: 30px;
+    margin-right: 105px;
+    margin-top: 53px;
   }
 
   .list-menu__link {
     font-size: 20px;
     border: none;
     color: #fff;
+    padding: 7px 0;
   }
 
   .list-menu__item--activ {
-    padding: 10px;
+    padding: 7px 0;
     text-align: center;
     border: none;
     border-bottom: 2px solid #fff;
