--- a/source/less/program.less
+++ b/source/less/program.less
@@ -16,25 +16,31 @@
     flex-direction: column;
     align-items: center;
     min-height: 266px;
+    margin-top: 0px;
+  }
+
+  .weight--pro {
     margin-top: 20px;
   }
 
   .weight h3 {
     font-family: "Oswald", "Arial", sans-serif;
     text-transform: uppercase;
-    padding: 36px 0 0 70px;
-    margin-left: 17px;
+    padding: 6px 0 0 57px;
+    margin-left: 13px;
     font-weight: normal;
     position: relative;
+    font-size: 24px;
   }
 
   .weight__description {
     font-family: "Arial", sans-serif;
     border-bottom: 1px solid #d9d9d9;
     font-size: 14px;
-    max-width: 230px;
-    padding: 10px 0 20px 0px;
-    margin-left: 17px;
+    line-height: 18px;
+    max-width: 238px;
+    padding: 5px 0 23px 0px;
+    margin-left: 0px;
   }
 
   .weight__link {
@@ -42,8 +48,9 @@
     text-decoration: none;
     color: #111111;
     text-transform: uppercase;
-    margin-left: 16px;
+    margin-left: 0px;
     position: relative;
+    padding: 0;
   }
 
   .weight__link::after {
@@ -55,40 +62,40 @@
 
   .weight__slim::before {
     content: "";
-    width: 51px;
-    height: 51px;
+    width: 50px;
+    height: 50px;
     background-color: #68b738;
     position: absolute;
-    left: 5px;
-    top: 29px;
+    left: -12px;
+    top: 0px;
     border-radius: 50%;
   }
 
   .weight__slim::after {
     content: url(../img/icon-cat-slim.svg);
-    width: 37px;
+    width: 36px;
     position: absolute;
-    left: 10px;
-    top: 25px;
+    left: -4px;
+    top: -3px;
   }
 
   .weight__pro::before {
     content: "";
-    width: 51px;
-    height: 51px;
+    width: 50px;
+    height: 50px;
     background-color: #68b738;
     position: absolute;
-    left: 0px;
-    top: 29px;
+    left: -13px;
+    top: 0px;
     border-radius: 50%;
   }
 
   .weight__pro::after {
     content: url(../img/icon-cat-pro.svg);
-    width: 65px;
+    width: 66px;
     position: absolute;
-    left: -10px;
-    top: 40px;
+    left: -21px;
+    top: 10px;
   }
 
 @media (min-width: @tablet-width) {
@@ -105,7 +112,7 @@
     }
 
     .weight__wrapper {
-      width: 748px;
+      width: 708px;
     }
 
     .weight h3 {
@@ -113,6 +120,7 @@
       margin: 0;
       padding-left: 0;
       margin-left: 53px;
+      margin-top: 62px;
     }
 
     .weight__description {
@@ -125,16 +133,26 @@
       margin: 7px 0 31px 53px;
     }
 
+    .description-pro {
+      max-width: 343px;
+    }
+
     .weight__link {
       margin-left: 53px;
       position: relative;
+      font-size: 20px;
+    }
+
+    .weight--pro {
+      margin-top: 30px;
     }
 
     .weight__link::after {
       content: url(../img/icon-right-arrow-long.svg);
       position: absolute;
       width: 25px;
-      left: 95px;
+      left: 130px;
+      top: -3px;
     }
 
     .weight__slim::before {
@@ -143,17 +161,17 @@
       height: 200px;
       background-color: #68b738;
       position: absolute;
-      left: 400px;
-      bottom: -150px;
+      left: 393px;
+      top: 30px;
       border-radius: 50%;
     }
 
     .weight__slim::after {
       content: url(../img/icon-cat-slim.svg);
-      width: 145px;
+      width: 142px;
       position: absolute;
-      left: 435px;
-      top: 25px;
+      left: 421px;
+      top: 17px;
     }
 
     .weight__pro::before {
@@ -162,17 +180,17 @@
       height: 200px;
       background-color: #68b738;
       position: absolute;
-      left: 400px;
+      left: 395px;
       top: 29px;
       border-radius: 50%;
     }
 
     .weight__pro::after {
       content: url(../img/icon-cat-pro.svg);
-      width: 270px;
+      width: 269px;
       position: absolute;
-      left: 365px;
-      top: 70px;
+      left: 359px;
+      top: 72px;
     }
 }
 
@@ -182,6 +200,7 @@
     background-color: #fff;
     display: flex;
     flex-direction: row;
+    margin-top: 52px;
   }
 
   .program__weight {
@@ -196,13 +215,14 @@
 
     .weight--pro {
       margin-left: 80px;
+      margin-top: 0;
     }
 
     .weight h3 {
       font-size: 36px;
       margin: 0;
-      margin-right: 0;
-      margin-left: 50px;
+      margin-top: 61px;
+      margin-left: 72px;
       padding-left: 140px;
       max-width: 300px;
     }
@@ -214,7 +234,7 @@
       line-height: 24px;
       max-width: 465px;
       padding: 10px 0 20px 0px;
-      margin: 57px 0 31px 33px;
+      margin: 58px 0 9px 50px;
     }
 
     .weight__link {
@@ -227,7 +247,7 @@
       content: url(../img/icon-right-arrow-long.svg);
       position: absolute;
       width: 25px;
-      left: 95px;
+      left: 130px;
     }
 
     .weight__slim::before {
@@ -236,8 +256,8 @@
       height: 100px;
       background-color: #68b738;
       position: absolute;
-      left: 5px;
-      top: 29px;
+      left: -19px;
+      top: -11px;
       border-radius: 50%;
     }
 
@@ -245,8 +265,8 @@
       content: url(../img/icon-cat-slim.svg);
       width: 70px;
       position: absolute;
-      left: 22px;
-      top: 25px;
+      left: -5px;
+      top: -17px;
     }
 
     .weight__pro::before {
@@ -255,8 +275,8 @@
       height: 100px;
       background-color: #68b738;
       position: absolute;
-      left: 0px;
-      top: 29px;
+      left: -18px;
+      top: -14px;
       border-radius: 50%;
     }
 
@@ -264,7 +284,7 @@
       content: url(../img/icon-cat-pro.svg);
       width: 130px;
       position: absolute;
-      left: -15px;
-      top: 53px;
+      left: -35px;
+      top: 10px;
     }
 }
